Mu hradware adaption

--- a/Firmware/platformio/platformio.ini
+++ b/Firmware/platformio/platformio.ini
@@ -14,19 +14,20 @@ default_envs = esp32dev
 [env:esp32dev]
 framework = arduino
 platform = espressif32
-board = esp32dev
+board = esp32doit-devkit-v1
 board_build.partitions = noota_3g.csv
 upload_protocol = esptool
-Monitor_speed = 115200
-
-lib_deps=
-    SPI
-    SPIFFS
-    FS
-    WiFi
-    Adafruit SHT31 Library
-    Adafruit Si7021 Library
-    ESP Async WebServer
-    me-no-dev/AsyncTCP
-    DallasTemperature
-    PaulStoffregen/OneWire
+monitor_speed = 115200
+build_flags = -D DEBUG_ESP_PORT=Serial
+lib_deps = 
+	SPI
+	SPIFFS
+	FS
+	WiFi
+	Adafruit SHT31 Library
+	Adafruit Si7021 Library
+	ESP Async WebServer
+	me-no-dev/AsyncTCP
+	DallasTemperature
+	PaulStoffregen/OneWire
+	adafruit/Adafruit AHTX0@^2.0.5
